# trending-youtube-videos-scraper

./: LICENSE  README.md  pyproject.toml  scraper.py  scratch.py  videos.csv
