[tool.poetry]
name = "repl_python3_trending-youtube-videos-scraper"
version = "0.1.0"
description = ""
authors = ["heisenberg007 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.6.4"
selenium = "^4.1.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
